[tool.poetry]
name = "los-to-rc"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "los_to_rc"}]

[tool.poetry.dependencies]
python = ">=3.10, <3.12"
numpy = "^1.25.0"
matplotlib = "^3.7.1"
pandas = "^2.0.3"
astropy = "^5.3"
pyside6 = "^6.5.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
